# databricks-mcp-server

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  pyproject.toml
.continue/mcpServers/: new-mcp-server.yaml
.cursor/: mcp.json
.github/workflows/: docker-release.yml
rules/.cursor/: dab-pipeline-config.mdc  databricks-mcp.mdc  dlt-pipeline-config.mdc  general.mdc  job-configuration.mdc  scheduling-production-patterns.mdc
rules/continue.dev/: dab-pipeline-config.yaml  databricks-mcp.yaml  dlt-pipeline-config.yaml  general.yaml  job-configuration.yaml  scheduling-production-patterns.yaml
src/databricks_mcp/: __main__.py  main.py
src/databricks_mcp/api/: jobs_client.py  response_masks.py  unity_catalog_client.py  utils.py
src/databricks_mcp/api/masks/: catalog_mask.json  get_jobs_mask.json  get_jobs_runs_mask.json  get_table_details_mask.json  jobs_details_mask.json  jobs_mask.json  jobs_runs_mask.json  schemas_mask.json  table_details_mask.json  tables_mask.json
src/databricks_mcp/server/: mcp_server.py
